--- a/api/package.json
+++ b/api/package.json
@@ -6,14 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.15",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "redoc": "^2.0.0-rc.45",
-    "redoc-express": "^1.0.0"
+    "redoc-express": "^1.0.0",
+    "xml2js": "^0.4.23"
   }
 }
