--- a/api/package.json
+++ b/api/package.json
@@ -3,21 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.15",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
     "redoc": "^2.0.0-rc.45",
-    "redoc-express": "^1.0.0",
-    "xml2js": "^0.4.23"
+    "redoc-express": "^1.0.0"
   }
 }
