--- a/api/package.json
+++ b/api/package.json
@@ -15,10 +15,11 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "pug": "^3.0.0",
     "redoc": "^2.0.0-rc.45",
-    "redoc-express": "^1.0.0"
+    "redoc-express": "^1.0.0",
+    "ws": "^7.4.2"
   }
 }
