--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,6 @@
     "morgan": "~1.9.1",
     "pug": "^3.0.0",
     "redoc": "^2.0.0-rc.45",
-    "redoc-express": "^1.0.0",
-    "ws": "^7.4.2"
+    "redoc-express": "^1.0.0"
   }
 }
