--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon --ignore storage/ app.ts ",
-    "start:dev": "cross-env DEBUG=showrunner:* yarn start",
-    "build": "tsc --project ./"
+    "start": "nodemon dist/app.js ",
+    "start:dev": "cross-env DEBUG=showrunner:* nodemon app.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "^4.3.1",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.0",
     "redoc-express": "^1.0.0"
