--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon dist/app.js ",
+    "start": "node dist/app.js ",
     "start:dev": "cross-env DEBUG=showrunner:* nodemon app.ts",
     "build": "tsc"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "^4.3.1",
     "express": "^4.17.1",
-    "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0",
     "redoc-express": "^1.0.0"
   },
   "devDependencies": {
