--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,5 @@ jobs:
         with:
           push: true
           tags: showrunner-server:latest
+          github-token: ${{secrets.GITHUB_TOKEN}}
         
