--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{github.repository}}:latest
+          tags: ghcr.io/coderatparadise/showrunner:latest
         
