--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "morgan": "~1.9.1",
     "redoc-express": "^1.0.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
