--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "morgan": "~1.9.1",
-    "redoc-express": "^1.0.0"
+    "redoc-express": "^1.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
