--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "eventemitter2": "^6.4.4",
     "express": "^4.17.1",
     "morgan": "~1.9.1",
     "redoc-express": "^1.0.0",
