--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/coderatparadise/showrunner-server:${{github.tag}}
+          tags: ${{github.tag}}
         
