--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     tags:
-      - "v*.*.*"
+      - "*.*.*"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -34,5 +34,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/coderatparadise/showrunner-server:${{github.ref}}
+          tags: ghcr.io/coderatparadise/showrunner-server:0.0.0
         
