--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,7 @@
         "semi": ["error","always"],
         "quotes": ["warn","double"],
         "curly":["warn","multi-or-nest"],
-        "indent": ["error",4],
+        "indent": ["error", 4, {"SwitchCase": 1}],
         "space-before-function-paren":["warn",{
             "anonymous": "always",
             "named": "never",
