--- a/package.json
+++ b/package.json
@@ -9,41 +9,43 @@
     "format": "yarn prettier --write 'app.ts' 'src/**/*.ts'"
   },
   "resolutions": {
-    "@coderatparadise/showrunner-common": "portal:/D:/Dev/showrunner-common"
+    "@coderatparadise/showrunner-common": "portal:/D:/Dev/showrunner-common",
+    "@coderatparadise/amp-grassvalley": "portal:/D:/Dev/amp-grassvalley"
   },
   "dependencies": {
+    "@coderatparadise/amp-grassvalley": "^1.0.0",
     "@coderatparadise/showrunner-common": "^0.5.3",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "debug": "^4.3.3",
     "eventemitter2": "^6.4.5",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/body-parser": "^1",
-    "@types/cors": "^2",
-    "@types/debug": "^4",
-    "@types/eslint": "^8",
-    "@types/express": "^4",
-    "@types/morgan": "^1",
-    "@types/node": "^17.0.5",
-    "@types/prettier": "^2",
-    "@types/uuid": "^8",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "@yarnpkg/sdks": "^2.5.1-rc.6",
-    "eslint": "^8.5.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
+    "@types/eslint": "^8.4.1",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.21",
+    "@types/prettier": "^2.4.4",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "@yarnpkg/sdks": "^2.6.0",
+    "eslint": "^8.10.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   }
 }
