--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "lib": ["esnext"],
-    "moduleResolution": "node",
-    "rootDir": "./",
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "strict": true,
-  },
-  "files": ["app.ts"],
-  "include": ["src/**/*" ]
-}
+    "compilerOptions": {
+      "target": "es2020",
+      "module": "CommonJS",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
+      "skipLibCheck": true,
+      "outDir":"./dist",
+      "declaration": true,
+      "moduleResolution": "node"
+    },
+    "include": ["./src"]
+  }
+  
+  
