--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": "^4.3.3",
     "eventemitter2": "^6.4.5",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
@@ -29,6 +30,7 @@
     "@types/debug": "^4.1.7",
     "@types/eslint": "^8.4.1",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "@types/prettier": "^2.4.4",
