--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,10 @@
+
+npmScopes:
+  coderatparadise:
+    npmPublishRegistry: https://npm.pkg.github.com
+    npmRegistryServer: https://npm.pkg.github.com
+    npmAuthToken: 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
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
