--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "showrunner-server",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "packageManager": "yarn@3.2.0",
   "scripts": {
     "start": "DEBUG='showrunner:*' nodemon ./src/app.ts",
@@ -9,12 +9,11 @@
     "format": "yarn prettier --write'src/**/*.ts'"
   },
   "resolutions": {
-    "@coderatparadise/showrunner-common": "portal:/D:/Dev/showrunner-common",
-    "@coderatparadise/amp-grassvalley": "portal:/D:/Dev/amp-grassvalley"
+    "@coderatparadise/showrunner-common": "portal:/D:/Dev/showrunner-common"
   },
   "dependencies": {
     "@coderatparadise/amp-grassvalley": "^1.0.0",
-    "@coderatparadise/showrunner-common": "^0.5.3",
+    "@coderatparadise/showrunner-common": "^0.2.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -32,23 +31,23 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^17.0.35",
-    "@types/prettier": "^2.6.1",
+    "@types/node": "^17.0.40",
+    "@types/prettier": "^2.6.3",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "@yarnpkg/sdks": "^3.0.0-rc.6",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-tsdoc": "^0.2.16",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
-    "ts-node": "^10.8.0",
+    "ts-node": "^10.8.1",
     "typescript": "^4.6.4"
   }
 }
